# GitNova

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: pull_request_template.md
adr/: ADR-0001-Architecture.md  ADR-0002-Tauri.md  ADR-0003-Local-First.md  ADR-0004-Core-Process.md  ADR-0005-GitHub-Provider.md  README.md
apps/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  transport.rs
assets/: README.md
crates/: README.md
docs/: ARCHITECTURE.md  BRANDING.md  CODING_STANDARD.md  COMMIT_DIFF.md  COMMIT_GRAPH.md  DESKTOP_CORE_TRANSPORT.md  DIFF.md  FEATURE_LIST.md  GITHUB_PROVIDER.md  GITHUB_PULL_REQUESTS.md  GLOSSARY.md  HISTORY.md  MUTATIONS.md  NON_FUNCTIONAL.md  PRODUCT_REQUIREMENTS.md  PROJECT.md  PROJECT_STRUCTURE.md  PROTOCOL.md  QUALITY_BASELINE.md  README.md  REFERENCES.md  REPOSITORIES.md  ROADMAP.md  SQUASH_TRACE.md  STATUS.md  TECH_STACK.md  UI_GUIDELINE.md  VISION.md
scripts/: README.md  check-quality.mjs  generate-protocol.mjs
sdk/: README.md
tasks/: README.md  TASK-0001-project-foundation.md  TASK-0002-core-contract.md  TASK-0003-repository-discovery.md  TASK-0004-working-tree-status.md  TASK-0005-structured-file-diff.md  TASK-0006-paginated-commit-history.md  TASK-0007-structured-commit-diff.md  TASK-0008-repository-references.md  TASK-0009-commit-graph-projection.md  TASK-0010-github-provider-foundation.md  (+18 more)
(+51 files in other folders)
