[package]
name = "gitnova-desktop"
version = "0.1.0"
description = "GitNova Desktop Host"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "gitnova_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
