[package]
name = "gitnova-desktop"
version = "0.1.0"
description = "GitNova Desktop Host"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "gitnova_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gitnova-protocol = { path = "../../../crates/gitnova-protocol" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
